examples/type_system/failing/10_adt_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

data Color {
    Red,
    Green,
    Blue,
}

data Test {
    One,
    Two,
}

fn name(c: Color) -> String {
    match c {
        Red -> "red",
        Green -> "green",
        // Missing: Blue
    }
}

fn pass(t: Test) -> String {
    "Rectangle #{t}"
}

name(Red)

let t = One

print(pass(t))


